HW2 - added users authorization and registration

--- a/node-assignment2/views/components/header.ejs
+++ b/node-assignment2/views/components/header.ejs
@@ -1,11 +1,12 @@
 <header class="header">
     <div class="header__content">
         <div class="header__logo">
-            NotesApp
+            <a href="/" class="header__logo-link">NotesApp</a>
         </div>
+
         <div class="header__log">
             <a href="/login" class="header__link header__login-link">Log in</a>
-            <a href="/" class="header__link header__register-link">Register</a>
+            <a href="/registration" class="header__link header__register-link">Register</a>
         </div>
     </div>
 </header>
