--- a/node-assignment2/public/style.css
+++ b/node-assignment2/public/style.css
@@ -134,6 +134,7 @@ a {
     margin: 0;
     padding: 2%;
     text-align: center;
+    background-color: #ffffff;
 }
 
 .form__container {
@@ -141,12 +142,12 @@ a {
 }
 
 .form__input {
-    border: none;
+    border: 2px solid #006f6f;
     padding: 10px;
     width: 60%;
     border-radius: 3px;
     outline: none;
-    text-indent: 10px;
+    text-indent: 3px;
 }
 
 .form__label {
@@ -182,6 +183,10 @@ a {
 
 /* PERSONAL PAGE */
 
+.personal-section {
+    background-color: #d3d3d3;
+}
+
 .notes__container {
     display: flex;
     flex-direction: column;
@@ -203,7 +208,7 @@ a {
     width: 300px;
     outline: none;
     height: 40px;
-    border-radius: 4px;
+    border-radius: 1px;
     border: 2px solid #006f6f;
     box-shadow: 2px 2px 10px #465a5c;
     text-indent: 10px;
@@ -242,6 +247,7 @@ a {
     flex-basis: 30%;
     margin: 10px;
     padding: 30px;
+    background-color: #ffffff;
     border: 2px solid #006f6f;
     box-shadow: 2px 2px 10px #465a5c;
 }
