--- a/node-assignment2/views/personal.ejs
+++ b/node-assignment2/views/personal.ejs
@@ -14,27 +14,29 @@
             <div class="header__logo">
                 <a href="/" class="header__logo-link">NotesApp</a>
             </div>
+            <div class="header__log">
                 <h1 class="header__logname">Welcome <%= user.name %>!</h1>
-                <div class="header__log">
-                    <form method="POST" action="/logout?_method=DELETE" class="logout__form">
-                        <button type="submit" class="header__button header__logout-link">Log out</button>
-                    </form>
-                    <form method="POST" action="/delete-account?_method=DELETE" class="logout__form">
-                        <button type="submit" class="header__button header__delete-link">Delete Account</button>
-                    </form>
-                </div>
+                <form method="POST" action="/logout?_method=DELETE" class="logout__form">
+                    <button type="submit" class="header__button header__logout-link">Log out</button>
+                </form>
+                <form method="DELETE" action="/delete-account" class="logout__form">
+                    <input name="id" value=<%= user.id %> type="hidden">
+                    <button type="submit" class="header__button header__delete-link">Delete Account</button>
+                </form>
+            </div>
 
         </div>
     </header>
 
-    <section>
+    <section class="personal-section">
         <h1 class="section__title">Notes</h1>
         <div class="notes__container">
-            <form class="notes__form">
+            <form class="notes__form" method="POST" action="personal/notes">
+                <input name="id" value=<%= user.id %> type="hidden">
                 <div class="notes__form-input-container">
-                    <input name="notename" class="notes__input">
+                    <input name="notetext" class="notes__input">
                 </div>
-                <button class="notes__create-button">Create Note</button>
+                <button type="submit" class="notes__create-button">Create Note</button>
             </form>
             <ul class="notes__list">
                 <% for(let i = 0; i < user.notes.length; i++){ %>
